<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/sync_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:text="@string/sync_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/clear_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sync_button" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="365dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085">

        <TextView
            android:id="@+id/userText"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:gravity="center_horizontal"
            android:text="@string/userText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gamesNumber"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/gameText"
            android:textSize="20sp" />

        <Button
            android:id="@+id/game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_button" />

        <TextView
            android:id="@+id/extrasNumber"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:paddingTop="5dp"
            android:text="@string/extrasText"
            android:textSize="20sp" />

        <Button
            android:id="@+id/extra_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extra_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/syncText"
        android:layout_width="368dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/syncText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_button" />
</androidx.constraintlayout.widget.ConstraintLayout>