<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/linearLayout2"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".GamesFragment" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/sortText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sortText" />

    <Button
        android:id="@+id/sortByTitleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:text="@string/sort_title_button" />

    <Button
        android:id="@+id/sortByYearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:text="@string/sort_year_button" />
</LinearLayout>

<ScrollView
    android:id="@+id/table"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/expansionsTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" />
</ScrollView>

</LinearLayout>