<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".GameDetailsFragment">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:gravity="center"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/rankText"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/rankText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="259dp">

        <TextView
            android:id="@+id/gameDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/takePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/takePhoto" />

        <Button
            android:id="@+id/getPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/getPhoto" />

        <Button
            android:id="@+id/deletePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/deletePhoto" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageRow"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:maxWidth="100dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            tools:src="@drawable/ic_launcher_background" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:maxWidth="100dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            tools:src="@drawable/ic_launcher_background" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:maxWidth="100dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            tools:src="@drawable/ic_launcher_background" />

    </LinearLayout>

</LinearLayout>